--- a/src/components/navbar/style.module.scss
+++ b/src/components/navbar/style.module.scss
@@ -1,6 +1,6 @@
 .navbar {
     position: fixed;
-    top: 0;
+    top: 1vh;
     left: 0;
     width: 100%;
     z-index: 999;
@@ -24,20 +24,27 @@
 
 
 .left {
+    position: relative;
+    z-index: 999;
+
     a {
+        display: inline-block; // to make the link behave as a block element
+        padding: 0.5rem;
+        background: var(--container-color);
+        backdrop-filter: blur(15px);
+        -webkit-backdrop-filter: blur(15px);
+        border: 1px solid rgba(236, 234, 230, 0.3);
+        border-radius: 1rem;
+        position: relative;
+        z-index: 9;
+
         img {
-            width: 3.5rem;
-            height: 3.5rem;
-            object-fit: contain;
-            padding: 0.5rem;
-            background: var(--container-color);
-            backdrop-filter: blur(15px);
-            -webkit-backdrop-filter: blur(15px);
-            border: 1px solid rgba(236, 234, 230, 0.3);
-            border-radius: 1rem;
+            width: 2.5rem;
+            height: 2.5rem;
+            object-fit: cover;
+            display: block; // to remove any inline spacing
         }
     }
-
 }
 
 .right {
@@ -63,13 +70,11 @@
     transition: var(--animation-primary);
     overflow: hidden; // Add this line
 
-    @media (max-width: 1299px) {
-
-    }
+    @media (max-width: 1299px) {}
 
     @media (max-width: 1088px) {
         position: relative;
-        width: 75vw ;
+        width: 75vw;
         align-items: center;
     }
 }
@@ -82,6 +87,7 @@
     border: 1px solid rgba(236, 234, 230, 0.3);
     border-radius: 1rem;
     padding: 1rem;
+    padding-bottom: 0.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -127,6 +133,7 @@
     -webkit-backdrop-filter: blur(15px);
     border: 1px solid rgba(236, 234, 230, 0.3);
     border-radius: 1rem;
+
     h3 {
         font-size: 1rem;
         font-family: var(--body-font);
@@ -146,4 +153,46 @@
     cursor: pointer;
     transition: var(--animation-primary);
     padding-bottom: 1rem;
+}
+
+
+.menuItems {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    gap: 1rem;
+    position: relative;
+    height: 100%;
+    padding: 1rem 0;
+    top: 0;
+
+    z-index: 1;
+
+    a {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        height: fit-content;
+        width: 100%;
+        gap: 1rem;
+        color: var(--title-color);
+        text-decoration: none;
+        font-family: var(--body-font);
+        font-size: 1rem;
+        transition: color 0.3s ease;
+
+        &:hover {
+            color: var(--primary-color);
+        }
+    }
+
+    .menuItem {
+        // Your existing styles for menu items
+
+        &.active {
+            text-decoration: underline;
+            font-family: var(--title-font);
+        }
+    }
 }
